[package]
name = "nova"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
anyhow = "1.0.42"
image = "0.23.14"
indicatif = {version = "0.16.2", features = ["improved_unicode"]}


[patch.crates-io]
console = { git = "https://github.com/mitsuhiko/console"}
