[package]
name = "nova"
version = "0.1.0"
edition = "2018"
default-run = "nova"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
anyhow = "1.0.42"
image = "0.23.14"
indicatif = { git = "https://github.com/mitsuhiko/indicatif", features = ["improved_unicode"] }
rand = "0.8.4"
rand_distr = "0.4.1"


[patch.crates-io]
console = { git = "https://github.com/mitsuhiko/console"}
